添加motionlayout使用案例，使用Jetpack/LiveData&ViewModel 构建MVVM框架。 还有一些另外的第三方库的使用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.demo.greendaotest">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".application.MyApplication"
@@ -19,6 +20,7 @@
         </activity>
         <activity android:name=".GreenDaoActivity"/>
         <activity android:name=".MotionActivity"/>
+        <activity android:name=".JetpackActivity"/>
     </application>
 
 </manifest>
