增加 Jetpack paging分页库 LifeCycle WorkMange 使用案例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".GreenDaoActivity"/>
         <activity android:name=".MotionActivity"/>
         <activity android:name=".JetpackActivity"/>
+        <activity android:name=".PagingActivity"/>
+        <activity android:name=".LifecycleActivity"/>
     </application>
 
 </manifest>
