--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'android.arch.paging:runtime:1.0.1'
+    implementation "android.arch.work:work-runtime:1.0.1"
 }
