--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.demo.greendaotest">
+    package="com.example.demo.practice">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".application.MyApplication"
+        android:name="com.example.demo.practice.application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.demo.practice.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GreenDaoActivity"/>
-        <activity android:name=".MotionActivity"/>
-        <activity android:name=".JetpackActivity"/>
-        <activity android:name=".PagingActivity"/>
-        <activity android:name=".LifecycleActivity"/>
+        <activity android:name="com.example.demo.practice.GreenDaoActivity"/>
+        <activity android:name="com.example.demo.practice.MotionActivity"/>
+        <activity android:name="com.example.demo.practice.JetpackActivity"/>
+        <activity android:name="com.example.demo.practice.PagingActivity"/>
+        <activity android:name="com.example.demo.practice.LifecycleActivity"/>
+        <activity android:name="com.example.demo.practice.DatabindingActivity"/>
     </application>
 
 </manifest>
