//复习了一下自定义View  写了几个天气View

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name="com.example.demo.practice.DatabindingActivity"/>
         <activity android:name=".RxJavaActivity"/>
         <activity android:name=".ObjectBoxActivity"/>
+        <activity android:name=".DiffUtilActivity"/>
+        <activity android:name=".CustomViewActivity"/>
     </application>
 
 </manifest>
