--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "android.arch.work:work-runtime:1.0.1"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation 'com.wuyr:litepager:1.2.1'
 //    debugImplementation "io.objectbox:objectbox-android-objectbrowser:$objectboxVersion"
 //    releaseImplementation "io.objectbox:objectbox-android:$objectboxVersion"
 }
