--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ObjectBoxActivity"/>
         <activity android:name=".DiffUtilActivity"/>
         <activity android:name=".CustomViewActivity"/>
+        <activity android:name=".CustomViewGroupActivity"/>
     </application>
 
 </manifest>
